<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/setting"
                android:textColor="@color/white"
                android:textSize="@dimen/setting_tv_size"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/ln_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground">


        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="@dimen/setting_page_icon"
            android:layout_height="@dimen/setting_page_icon"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:layout_marginTop="@dimen/margin_normal"
            android:adjustViewBounds="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_toRightOf="@+id/img_avatar"
            android:text="@string/profle"
            android:textSize="@dimen/setting_tv_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/img_avatar"
            android:layout_marginTop="@dimen/setting_mgtop"
            android:background="@color/gray_light"
            android:visibility="visible" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ln_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_mgtop"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.crewcloud.apps.crewnotice.view.RoundedLayoutCircle
            android:layout_width="@dimen/setting_page_icon_under"
            android:layout_height="@dimen/setting_page_icon_under"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/menuleft_ic_setting_white" />
        </com.crewcloud.apps.crewnotice.view.RoundedLayoutCircle>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:text="@string/Generalsettings"
            android:textSize="@dimen/setting_tv_size" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/setting_mgtop"
        android:background="@color/gray_light"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/ln_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">


        <com.crewcloud.apps.crewnotice.view.RoundedLayoutCircle
            android:id="@+id/setting_page_layout_rlc_notify"
            android:layout_width="@dimen/setting_page_icon_under"
            android:layout_height="@dimen/setting_page_icon_under"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/add_btn_alarm" />
        </com.crewcloud.apps.crewnotice.view.RoundedLayoutCircle>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:layout_toRightOf="@+id/setting_page_layout_rlc_notify"
            android:text="@string/notify_setting"
            android:textSize="@dimen/setting_tv_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/setting_page_layout_rlc_notify"
            android:layout_marginTop="@dimen/setting_mgtop"
            android:background="@color/gray_light" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/ln_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground">


        <com.crewcloud.apps.crewnotice.view.RoundedLayoutCircle
            android:id="@+id/setting_page_layout_rlc_logout"
            android:layout_width="@dimen/setting_page_icon_under"
            android:layout_height="@dimen/setting_page_icon_under"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/setting_ic_logout" />
        </com.crewcloud.apps.crewnotice.view.RoundedLayoutCircle>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:layout_toRightOf="@+id/setting_page_layout_rlc_logout"
            android:text="@string/logout"
            android:textSize="@dimen/setting_tv_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/setting_page_layout_rlc_logout"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@color/gray_light" />

    </RelativeLayout>


</LinearLayout>
